--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -143,8 +143,8 @@ aside {
     margin-top: 20px;
   }
   section {
-    padding: 10px 0;
-    margin-top: 20px;
+    padding: 5px 0;
+    margin-top: 5px;
     &:first-child {
       border: 0;
       padding-top: 0;
@@ -314,6 +314,11 @@ input {
     margin-top: 5em;
     padding-top: 0;
   }
+  .btn-sm{
+    margin-top: 5px;
+    padding: 2px;
+
+  }
   .subject {
     display: block;
     margin-left: 10px;
@@ -343,7 +348,7 @@ input {
     text-align: center;
     font-size: x-large;
     //height: 100px;
-    margin-top: 10px;
+    //margin-top: 10px;
     font-weight: bold;
   }
   .gravatar {
@@ -549,5 +554,25 @@ span.picture {
 
   margin: 20px;
   border: #26ae90 1px solid;
+
+}
+
+.timetable-image{
+
+  width:100%;
+  height: 100%;
+
+}
+
+/* posts */
+
+.timetables {
+  list-style: none;
+  padding: 0;
+  li {
+    margin: 10px;
+    border-bottom: 1px solid #e8e8e8;
+    max-height: 1000px;
+  }
 
 }
