--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,17 @@
         });
     });
 
+    $(document).ready(function(){
+      $(".toggle-timetable").click(function(){
+        $(".timetable-show").slideToggle();
+      });
+    });
+
     $(document).on("ready page:change", function() {
         $('.tip').tooltip();
     });
+
+
 </script>
 
 <header class="navbar navbar-fixed-top navbar-inverse">
@@ -20,10 +28,11 @@
 
             <% if current_page?(root_path) %>
                 <li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>
+                <li><%= link_to image_tag("timetable.png"), "#", 'data-no-turbolink' => true, class: "toggle-timetable tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'View Timetable' %></li>
             <% else %>
                 <li><%= link_to image_tag("add.png"), root_path, 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>
-           <% end %>
-            <li><%= link_to image_tag("timetable.png"), timetables_path, 'data-no-turbolink' => true, class: "tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'View Timetable' %></li>
+                <li><%= link_to image_tag("timetable.png"), root_path, 'data-no-turbolink' => true, class: "toggle-timetable tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'View Timetable' %></li>
+      <% end %>
 
             <!--<li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>-->
             <% if current_user.admin? %><li><%= link_to image_tag("users.png"), users_path , class: "tip" ,'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Users'%></li><% end %>
