--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,10 @@
  *= require_tree .
  *= require_self
  *= require bootstrap-datepicker3
+ *= require gritter
  */
 /*
  *= require rails_bootstrap_forms
  */
+
 
