--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,37 @@
 <% provide(:title, 'Sign up') %>
 
-    <center><h1>Sign up</h1></center>
+<div class="home-screen">
 
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <%= form_for(@user) do |f| %>
+      <div class="col-md-6">
+        <%= bootstrap_form_for(@user) do |f| %>
 
             <%= render 'shared/error_messages', object: f.object %>
 
-          <%= f.label :name %>
           <%= f.text_field :name %>
 
-          <%= f.label :email %>
           <%= f.email_field :email %>
 
-          <%= f.label :password %>
           <%= f.password_field :password %>
 
-          <%= f.label :password_confirmation, "Confirmation" %>
           <%= f.password_field :password_confirmation %>
+
+
+
 
           <%= f.submit "Create my account", class: "btn btn-primary" %>
         <% end %>
       </div>
+      <div class="col-md-6">
+
+        <div class="sign-up-welcome well">
+
+          <h2>About College Planner</h2>
+          <p>Take 2 minutes to join the College Planner Website and download the College Planner App to help keep track of all your college work. never miss a deadline again.</p>
+          <p>You will get access to track projects, events, and deadlines. You can also upload your timetable for future quick reference.</p>
+          <p>Android Users can download our App with the same functionality as this website.</p>
+        </div>
+
+      </div>
     </div>
+  </div>
