Started college model.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -678,3 +678,23 @@ span.picture {
   }
 
 }
+
+.group-form{
+
+  display: none;
+  margin: 10px;
+
+}
+
+.toggle-form-group{
+
+  width: 100%;
+
+}
+
+.group-title{
+
+  font-weight: bold;
+  font-size: large;
+
+}
