--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
-  <!--<div class="row">-->
-  <div class="col-lg-6 stats-box">
+
+  <div class="col-lg-3 stats-box">
     <div class="row">
       <div class="col-xs-4">
         <h1 class="pull-right">
@@ -10,7 +10,7 @@
         </h1>
       </div>
       <div class="col-xs-8">
-       <h1 align="left"><%= @projects_today %></h1>
+        <h1 align="left"><%= @projects_today %></h1>
       </div>
     </div>
     <div class="row">
@@ -19,7 +19,8 @@
       </div>
     </div>
   </div>
-  <div class="col-lg-6 stats-box">
+
+  <div class="col-lg-3 stats-box">
     <div class="row">
       <div class="col-xs-4">
         <h1 class="pull-right">
@@ -29,7 +30,7 @@
         </h1>
       </div>
       <div class="col-xs-8">
-       <h1><%= @total_projects %></h1>
+        <h1><%= @total_projects %></h1>
       </div>
     </div>
     <div class="row">
@@ -39,42 +40,124 @@
     </div>
   </div>
 
-    <div class="col-lg-6 stats-box">
-      <div class="row">
-        <div class="col-xs-4">
-          <h1 class="pull-right">
-            <button type="button" class="btn btn-warning" ng-class="alert.colour">
-              <i class="glyphicon glyphicon-user" style="color:black" ng-class="alert.icon"></i>
-            </button>
-          </h1>
-        </div>
-        <div class="col-xs-8">
-          <h1><%= @users_today %></h1>
-        </div>
+  <div class="col-lg-3 stats-box">
+    <div class="row">
+      <div class="col-xs-4">
+        <h1 class="pull-right">
+          <button type="button" class="btn btn-warning" ng-class="alert.colour">
+            <i class="glyphicon glyphicon-user" style="color:black" ng-class="alert.icon"></i>
+          </button>
+        </h1>
       </div>
-      <div class="row">
-        <div class="col-xs-8 col-xs-offset-4">
-          <span class="text-muted">Users Joined Today</span>
-        </div>
+      <div class="col-xs-8">
+        <h1><%= @users_today %></h1>
       </div>
     </div>
-    <div class="col-lg-6 stats-box">
-      <div class="row">
-        <div class="col-xs-4">
-          <h1 class="pull-right">
-            <button type="button" class="btn btn-warning" ng-class="alert.colour">
-              <i class="glyphicon glyphicon-user" style="color:black" ng-class="alert.icon"></i>
-            </button>
-          </h1>
-        </div>
-        <div class="col-xs-8">
-          <h1><%= @total_users %></h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-8 col-xs-offset-4">
-          <span class="text-muted">Total Users</span>
-        </div>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4">
+        <span class="text-muted">Users Joined Today</span>
       </div>
     </div>
+  </div>
+
+  <div class="col-lg-3 stats-box">
+    <div class="row">
+      <div class="col-xs-4">
+        <h1 class="pull-right">
+          <button type="button" class="btn btn-warning" ng-class="alert.colour">
+            <i class="glyphicon glyphicon-user" style="color:black" ng-class="alert.icon"></i>
+          </button>
+        </h1>
+      </div>
+      <div class="col-xs-8">
+        <h1><%= @total_users %></h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4">
+        <span class="text-muted">Total Users</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-3 stats-box">
+    <div class="row">
+      <div class="col-xs-4">
+        <h1 class="pull-right">
+          <button type="button" class="btn btn-success" ng-class="alert.colour">
+            <i class="glyphicon glyphicon-euro" style="color:black" ng-class="alert.icon"></i>
+          </button>
+        </h1>
+      </div>
+      <div class="col-xs-8">
+        <h1 align="left"><%= @groups_today %></h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4">
+        <span class="text-muted">Group Notes Today</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-3 stats-box">
+    <div class="row">
+      <div class="col-xs-4">
+        <h1 class="pull-right">
+          <button type="button" class="btn btn-success" ng-class="alert.colour">
+            <i class="glyphicon  glyphicon-euro" style="color:black" ng-class="alert.icon"></i>
+          </button>
+        </h1>
+      </div>
+      <div class="col-xs-8">
+        <h1><%= @total_groups %></h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4">
+        <span class="text-muted">Total Group Notes</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-3 stats-box">
+    <div class="row">
+      <div class="col-xs-4">
+        <h1 class="pull-right">
+          <button type="button" class="btn btn-warning" ng-class="alert.colour">
+            <i class="glyphicon glyphicon-user" style="color:black" ng-class="alert.icon"></i>
+          </button>
+        </h1>
+      </div>
+      <div class="col-xs-8">
+        <h1><%= @colleges_today %></h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4">
+        <span class="text-muted">Colleges Today</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-3 stats-box">
+    <div class="row">
+      <div class="col-xs-4">
+        <h1 class="pull-right">
+          <button type="button" class="btn btn-warning" ng-class="alert.colour">
+            <i class="glyphicon glyphicon-user" style="color:black" ng-class="alert.icon"></i>
+          </button>
+        </h1>
+      </div>
+      <div class="col-xs-8">
+        <h1><%= @total_colleges %></h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4">
+        <span class="text-muted">Total Colleges</span>
+      </div>
+    </div>
+  </div>
+
 </div>
