--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -130,12 +130,12 @@
         </h1>
       </div>
       <div class="col-xs-8">
-        <h1><%= @colleges_today %></h1>
+        <h1><%= @users_weekly %></h1>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-8 col-xs-offset-4">
-        <span class="text-muted">Colleges Today</span>
+        <span class="text-muted">User this Week</span>
       </div>
     </div>
   </div>
@@ -150,12 +150,12 @@
         </h1>
       </div>
       <div class="col-xs-8">
-        <h1><%= @total_colleges %></h1>
+        <h1><%= @users_yearly %></h1>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-8 col-xs-offset-4">
-        <span class="text-muted">Total Colleges</span>
+        <span class="text-muted">Users this year</span>
       </div>
     </div>
   </div>
