--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,10 @@
 
           <%= f.email_field :email %>
 
+            <%= f.text_field :college_name %>
+
+            <%= f.email_field :course_name %>
+
           <%= f.password_field :password %>
 
           <%= f.password_field :password_confirmation %>
