--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,10 +30,13 @@
             <%= f.label :name %>
             <%= f.text_field :name, class: 'form-control' %>
 
-
+            <%= f.label :college_name %>
+            <%= f.text_field :college_name, class: 'form-control' %>
 
             <%= f.label :password %>
             <%= f.password_field :password, class: 'form-control' %>
+
+
 
 
             <!--<div class="gravatar_edit">-->
@@ -46,6 +49,9 @@
 
             <%= f.label :email %>
             <%= f.email_field :email, class: 'form-control' %>
+
+            <%= f.label :course_name %>
+            <%= f.text_field :course_name, class: 'form-control' %>
 
             <%= f.label :password_confirmation, "Confirm Password" %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
