Minor GUI Improvements.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -571,7 +571,7 @@ span.picture {
   li {
     margin: 10px;
     border-bottom: 1px solid #e8e8e8;
-    max-height: 1000px;
+    //max-height: 1000px;
   }
 
 }
