Changed URL. Added Title changes.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,8 +68,8 @@ p {
   margin-right: 10px;
   font-size: 1.7em;
   color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -1px;
+  //text-transform: uppercase;
+  letter-spacing: 1px;
   padding-top: 9px;
   font-weight: bold;
   line-height: 1.7em;
