--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
 
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "college planner", root_path, id: "logo", 'data-no-turbolink' => true %>
+    <%= link_to "CollegePlanner.xyz", root_path, id: "logo", 'data-no-turbolink' => true %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
