--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,12 +41,12 @@
 
       <%= image_tag("logo_150.png", class: "home-logo-center text-center", :alt => "College Planner") %>
 
-      <p class="text-center homescreen-text">College Planner is designed to help you keep track of
+      <p class="text-center homescreen-text">CollegePlanner.xyz is designed to help you keep track of
         work.</br>
         Join <%= @total_users %> other Students who have already posted <%= @total_projects %> projects.</p>
 
         <div class="home-buttons">
-        <a href="https://play.google.com/store/apps/details?id=com.chris.collegeplanner" class="btn btn-default btn-lg "><span class="glyphicon glyphicon-phone"></span> Download</a>
+        <a href="https://play.google.com/store/apps/details?id=com.chris.collegeplanner" class="btn btn-default btn-lg "><span class="glyphicon glyphicon-phone"></span> Download App</a>
 
         <a href="/signup" class="btn btn-default btn-lg "><span class="glyphicon glyphicon-user"></span> Sign Up</a>
         </div>
