fixed email verification.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
 
             <%= f.text_field :college_name %>
 
-            <%= f.email_field :course_name %>
+            <%= f.text_field :course_name %>
 
           <%= f.password_field :password %>
 
